templatize tmux.conf and config.fish

--- a/dot_config/brew/Brewfile
+++ b/dot_config/brew/Brewfile
@@ -3,19 +3,14 @@ tap 'homebrew/cask-versions'
 
 brew 'autojump'
 brew 'bat'
-brew 'curl'
-brew 'fisher'
-brew 'git'
+brew 'fish'
 brew 'neovim'
 brew 'poetry'
-brew 'pyenv'
-brew 'pyenv-virtualenv'
 brew 'python@3.9'
 brew 'ripgrep'
 brew 'tig'
 brew 'tmux'
 brew 'tree-sitter'
-brew 'zsh'
 
 cask '1password'
 cask 'dash'
