--- a/dot_config/alacritty/alacritty.yml
+++ b/dot_config/alacritty/alacritty.yml
@@ -1,14 +1,117 @@
 window:
-  startup_mode: Maximized
+  startup_mode: Windowed
+
+  padding:
+    x: 10
+    y: 2
+
+  # spread additional padding evenly around terminal content
+  dynamic_padding: false
+
+  # window decorations (border + title bar) [full, none]
+  decorations: full
 
 font:
   normal:
     family: Hack Nerd Font Mono
 
-  # Point size
-  size: 12.0
+  size: 11.0
 
   # offset - x is "line width", y is "line height"
   offset:
     x: 0
     y: 1
+
+draw_bold_text_with_bright_colors: true
+
+cursor:
+  style: Block
+  unfocused_hollow: true
+
+schemes:
+  monokai_pro: &monokai_pro
+    primary:
+      background: "#1d1f21"
+      foreground: "#FCFCFA"
+
+    normal:
+      black: "#403E41"
+      red: "#FF6188"
+      green: "#A9DC76"
+      yellow: "#FFD866"
+      blue: "#FC9867"
+      magenta: "#AB9DF2"
+      cyan: "#78DCE8"
+      white: "#FCFCFA"
+
+    bright:
+      black: "#727072"
+      red: "#FF6188"
+      green: "#A9DC76"
+      yellow: "#FFD866"
+      blue: "#FC9867"
+      magenta: "#AB9DF2"
+      cyan: "#78DCE8"
+      white: "#FCFCFA"
+
+  tomorrow_night: &tomorrow_night
+    primary:
+      background: "#1d1f21"
+      foreground: "#c5c8c6"
+
+    # Colors the cursor will use if `custom_cursor_colors` is true
+    cursor:
+      text: "#1d1f21"
+      cursor: "#ffffff"
+
+    normal:
+      black: "#1d1f21"
+      red: "#cc6666"
+      green: "#b5bd68"
+      yellow: "#e6c547"
+      blue: "#81a2be"
+      magenta: "#b294bb"
+      cyan: "#70c0ba"
+      white: "#373b41"
+
+    bright:
+      black: "#666666"
+      red: "#ff3334"
+      green: "#9ec400"
+      yellow: "#f0c674"
+      blue: "#81a2be"
+      magenta: "#b77ee0"
+      cyan: "#54ced6"
+      white: "#282a2e"
+
+  oxide: &oxide
+    primary:
+      background: "#212121"
+      foreground: "#c0c5ce"
+      bright_foreground: "#f3f4f5"
+
+    cursor:
+      text: "#212121"
+      cursor: "#c0c5ce"
+
+    normal:
+      black: "#212121"
+      red: "#e57373"
+      green: "#a6bc69"
+      yellow: "#fac863"
+      blue: "#6699cc"
+      magenta: "#c594c5"
+      cyan: "#5fb3b3"
+      white: "#c0c5ce"
+
+    bright:
+      black: "#5c5c5c"
+      red: "#e57373"
+      green: "#a6bc69"
+      yellow: "#fac863"
+      blue: "#6699cc"
+      magenta: "#c594c5"
+      cyan: "#5fb3b3"
+      white: "#f3f4f5"
+
+colors: *monokai_pro
