--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -187,10 +187,12 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# TODO: delete this block
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+# bar {
+#         status_command i3status
+# }
 
-exec /home/evanrittenhouse/.config/polybar/launch.sh
+# TODO: why doesn't this auto-start when i3 does?
+exec_always --no-start-up-id $HOME/.config/polybar/launch.sh
