--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -1,5 +1,22 @@
-[bar/mybar]
-monitor = eDP-1
+[bar/top]
+monitor = DP-1-2
+bottom = false
+width = 100%
+height = 27
+
+line-size = 2
+
+font-0 = HackNerdFonrMono:size=12;0
+
+spacing = 3
+padding-right = 4
+module-margin-left = 0
+module-margin-right = 6
+
+modules-right = volume wireless-network
+
+[bar/bottom]
+monitor = DP-1-2
 bottom = true
 width = 100%
 height = 27
@@ -11,15 +28,15 @@ padding-right = 4
 module-margin-left = 0
 module-margin-right = 6
 
-; font-0 = NotoSans-Regular:size=8;0
+font-0 = HackNerdFonrMono:size=12;0
 ; font-1 = unifont:size=6;-3
 ; font-2 = FontAwesome:size=8;-2
 ; font-3 = NotoSans-Regular:size=8;-1
 ; font-4 = MaterialIcons:size=10;-1
 ; font-5 = Termsynu:size=8:antialias=false;0
 
-modules-right = cpu memory
-modules-left = battery clock volume
+modules-left = cpu memory
+modules-right = battery clock
 
 [module/backlight]
 type = internal/xbacklight
@@ -156,7 +173,7 @@ bar-progress-empty-foreground = #44
 
 [module/wireless-network]
 type = internal/network
-interface = net1
+interface = wlp0s20f3
 interval = 3.0
 ping-interval = 10
 
@@ -186,7 +203,7 @@ label-connected =    %{T3}%local_ip%%{T-}
 label-disconnected-foreground = #66
 
 [module/volume]
-type = internal/volume
+type = internal/pulseaudio
 speaker-mixer = Speaker
 headphone-mixer = Headphone
 headphone-id = 9
