--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -187,4 +187,5 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+exec_always --no-startup-id $HOME/.config/wallpapers/launch_wallpaper.sh
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
