--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -1,5 +1,6 @@
 [bar/top]
-monitor = DP-1-2
+; monitor = DP-1-2
+monitor = ${env:MONITOR:}
 bottom = false
 width = 100%
 height = 27
@@ -16,7 +17,7 @@ module-margin-right = 6
 modules-right = volume wireless-network
 
 [bar/bottom]
-monitor = DP-1-2
+monitor = ${env:MONITOR:}
 bottom = true
 width = 100%
 height = 27
