--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -188,4 +188,5 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 exec_always --no-startup-id $HOME/.config/wallpapers/launch_wallpaper.sh
+exec_always --no-startup-id picom -b --config $HOME/.config/picom/picom.conf
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
