--- a/dot_config/picom/picom.conf
+++ b/dot_config/picom/picom.conf
@@ -133,7 +133,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-opacity-rule = ["100:name *= 'Firefox'", "100:name *= 'Brave-browser'"]
+opacity-rule = ["100:name *= 'Firefox'", "100:name *= 'brave-browser'"]
 
 
 #################################
