(polybar) add brightness

--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -37,11 +37,12 @@ font-0 = HackNerdFonrMono:size=12;0
 ; font-5 = Termsynu:size=8:antialias=false;0
 
 modules-left = cpu memory
-modules-right = battery clock
+modules-right = backlight battery clock
 
 [module/backlight]
-type = internal/xbacklight
+type = internal/backlight
 format = <ramp> <bar>
+card = intel_backlight
 
 ramp-0 = 
 ramp-1 = 
