--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -1,6 +1,36 @@
-palette = "gruvbox"
+palette = "evan"
+format = """
+$username\
+$hostname\
+$localip\
+$shlvl\
+$singularity\
+$kubernetes\
+$directory\
+$vcsh\
+$fossil_branch\
+$git_branch\
+$git_commit\
+$git_state\
+$git_metrics\
+$git_status\
+$hg_branch\
+$pijul_channel\
+$docker_context\
+$sudo\
+$cmd_duration\
+$line_break\
+$jobs\
+$battery\
+$time\
+$status\
+$os\
+$container\
+$shell\
+$character
+"""
 
-[palettes.gruvbox]
+[palettes.evan]
 black = "#665c54"
 red = "#ea6962"
 green = "#a9b665"
