--- a/dot_config/alacritty/alacritty.yml
+++ b/dot_config/alacritty/alacritty.yml
@@ -1,3 +1,6 @@
+env: 
+  xterm-256color
+
 window:
   startup_mode: Windowed
 
@@ -15,7 +18,7 @@ font:
   normal:
     family: FiraCode Nerd Font Mono
 
-  size: 12.0
+  size: 10.0
 
   # offset - x is "line width", y is "line height"
   offset:
