(polybar/i3) change bar

--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -7,14 +7,18 @@ height = 27
 
 line-size = 2
 
-font-0 = HackNerdFonrMono:size=12;0
+font-0 = FiraMonoNerdFont:size=12;0
+font-1 = FiraMonoNerdFont:size=16;0
 
 spacing = 3
 padding-right = 4
 module-margin-left = 0
 module-margin-right = 6
 
-modules-right = volume wireless-network
+modules-right = wireless-network battery
+
+; Matches kanagawa_minimalist in wallpaper
+background = #2e3440
 
 [bar/bottom]
 monitor = ${env:MONITOR:}
@@ -37,7 +41,11 @@ font-0 = HackNerdFonrMono:size=12;0
 ; font-5 = Termsynu:size=8:antialias=false;0
 
 modules-left = cpu memory
-modules-right = backlight battery clock
+modules-center = i3
+modules-right = backlight volume clock
+
+; Matches kanagawa_minimalist in /wallpapers
+background = #2e3440
 
 [module/backlight]
 type = internal/backlight
@@ -255,3 +263,32 @@ menu-2-1-exec = menu_open-0
 type = internal/date
 interval = 2
 date = %%{F#999}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
+
+[module/i3]
+type = internal/i3
+
+; Hacky, but adds padding to the block because icon isn't defined
+label-focused = %icon% %name% %icon%
+label-unfocused = %icon% %name% %icon%
+
+label-focused-foreground = #1F1F28
+label-focused-background = #FFA066
+; Only show workspaces defined on the same output as the bar
+;
+; Useful if you want to show monitor specific workspaces
+; on different bars
+;
+; Default: false
+;pin-workspaces = true
+
+;; Show urgent workspaces regardless of whether the workspace is actually hidden 
+;; by pin-workspaces.
+;;
+;; Default: false
+;; New in version 3.6.0
+;show-urgent = true
+
+
+
+
+
