--- a/dot_config/i3/config
+++ b/dot_config/i3/config
@@ -14,13 +14,16 @@ bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 
 # Start redshift (Linux f.lux equivalent) on computer startup
-exec_always --no-startup-id redshift -l 41.878:-87.629
+exec_always --no-startup-id redshift -l 41.878:-87.629 -m randr
 
 exec_always --no-startup-id ~/.config/wallpapers/launch_wallpaper.sh
 exec_always --no-startup-id picom -b --config $HOME/.config/picom/picom.conf
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 set $mod Mod1
+
+# Hide borders around the edges of windows
+hide_edge_borders both
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
