(polybar) volume module working

--- a/dot_config/polybar/config.ini
+++ b/dot_config/polybar/config.ini
@@ -17,7 +17,9 @@ padding-right = 4
 module-margin-left = 0
 module-margin-right = 6
 
-modules-right = wireless-network battery
+modules-left = wireless-network
+modules-center = i3
+modules-right = clock battery
 
 ; Matches kanagawa_minimalist in wallpaper
 background = #00000000
@@ -35,7 +37,11 @@ padding-right = 4
 module-margin-left = 0
 module-margin-right = 6
 
-font-0 = HackNerdFonrMono:size=12;0
+; TODO: from fonts file
+font-0 = HackNerdFont:size=12;0
+font-1 = FiraMonoNerdFont:size=16;0
+
+; font-0 = HackNerdFonrMono:size=12;0
 ; font-1 = unifont:size=6;-3
 ; font-2 = FontAwesome:size=8;-2
 ; font-3 = NotoSans-Regular:size=8;-1
@@ -44,8 +50,7 @@ font-0 = HackNerdFonrMono:size=12;0
 
 ; include-directory = $HOME/.config/polybar/modules
 modules-left = cpu memory
-modules-center = i3
-modules-right = backlight volume clock
+modules-right = backlight pulseaudio
 
 ; Matches kanagawa_minimalist in /wallpapers
 ; background = #2e3440
