(polybar/rofi) fix muted label and adjust rofi for new desktop

--- a/dot_config/polybar/modules/pulseaudio.ini
+++ b/dot_config/polybar/modules/pulseaudio.ini
@@ -15,11 +15,11 @@ label-volume-foreground = ${colors.fujiWhite}
 label-volume-padding = 1
 
 format-muted = <label-muted>
-format-muted-prefix = %{T10}%{T-}
+format-muted-prefix = %{T1}%{T-}
 format-muted-prefix-background = ${colors.samuraiRed}
 format-muted-prefix-foreground = ${colors.fujiWhite}
 format-muted-prefix-padding = 1
-label-muted = %{T2}%percentage%%%{T-}
+label-muted = muted
 label-muted-background = ${colors.samuraiRed}
 label-muted-foreground = ${colors.fujiWhite}
 label-muted-padding = 1
