(polybar) assorted fixes with colors

--- a/dot_config/polybar/modules/backlight.ini
+++ b/dot_config/polybar/modules/backlight.ini
@@ -13,7 +13,7 @@ bar-indicator-font = 3
 bar-indicator-foreground = #ff
 bar-fill = ─
 bar-fill-font = 3
-bar-fill-foreground = {{ .colors.autumnYellow }}
+bar-fill-foreground = ${colors.autumnYellow}
 bar-empty = ─
 bar-empty-font = 3
 bar-empty-foreground = #44
