--- a/dot_config/polybar/modules/battery.ini
+++ b/dot_config/polybar/modules/battery.ini
@@ -4,6 +4,9 @@ full-at = 98
 
 format-charging = <animation-charging> <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
+; format-discharging-padding = 1
+; format-discharging-background = ${colors.sumiInk4}
+format-discharging-foreground = ${colors.fujiWhite}
 format-full = <ramp-capacity> <label-full>
 
 ramp-capacity-0 = 
